assets/css/MUSA_no-more-tables.css
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; /* Prevents line breaks */
    border: 0;
}

@media only screen and (max-width: 800px) {
  #no-more-tables table, #no-more-tables thead, #no-more-tables tbody, #no-more-tables th, #no-more-tables td, #no-more-tables tr {
    display: block;
  }
}

@media only screen and (max-width: 800px) {
  #no-more-tables thead tr {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }
}

@media only screen and (max-width: 800px) {
  #no-more-tables tr {
    border: 1px solid #ccc;
  }
}

@media only screen and (max-width: 800px) {
  [data-theme="dark"] #no-more-tables tr {
    border: 1px solid #3a3a4e;
  }
}

@media only screen and (max-width: 800px) {
  #no-more-tables td {
    border: none;
    border-bottom: 1px solid #eee;
    position: relative;
    padding-left: 50%;
    white-space: normal;
    text-align: left;
  }
}

@media only screen and (max-width: 800px) {
  #no-more-tables td:before {
    position: absolute;
    top: 6px;
    left: 6px;
    width: 45%;
    padding-right: 10px;
    white-space: nowrap;
    text-align: left;
    font-weight: bold;
  }
}

@media only screen and (max-width: 800px) {
  #no-more-tables td:before {
    content: attr(data-title);
  }
}

/* price & chart cards in stockinfo.html; trendgauge in index.html*/
@media (max-width: 992px) {
  .myWrapper {
    margin-bottom: 0px;
  }
}

@media (min-width: 992px) {
  .col-md-12.table-condensed.cf {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0;
  }
  
  .myWrapper {
    margin-bottom: 16px;
  }
}

@media (min-width: 1200px) {
  .col-md-12.table-condensed.cf {
    -ms-flex: 0 0 67%;
    flex: 0 0 67%;
    max-width: 67%;
    padding: 0;
  }
}

/* about us */
@media (min-width: 768px) {
  .col-md-12.aboutus {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0;
  }
}

@media (min-width: 992px) {
  .col-md-12.aboutus {
    -ms-flex: 0 0 67%;
    flex: 0 0 67%;
    max-width: 67%;
    padding: 0;
  }
}

.clean-navbar.fixed-top + .page {
  padding-top: 0;
}

.navbar {
  padding-top: 0.1rem;
  padding-bottom: 0.1rem;
}

.navbar-toggler.collapsed.navtitle {
    border-style: none;
    color:#787878;
    font-weight: 600;
}

.box p {
  color: #333;
  padding: 15px;
}

.box {
  -moz-border-radius-topright: 5px;
  -moz-border-radius-topleft: 5px;
  -webkit-border-top-right-radius: 5px;
  -webkit-border-top-left-radius: 5px;
  border: 2px solid #ffaf00;
}

.box h5 {
  background: #ffbb00;
  color: white;
  padding: 5px;
}

.col-md-12.hoverTable.table-condensed.cf {
  border: 0px solid #dee2e6;
}

/* polar chart in stockinfo.html; widget in index.html */
@media (min-width: 300px) {
  .col-sm-6.col-lg-4 {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px;
  }
}

@media (min-width: 992px) {
  .col-sm-6.col-lg-4 {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 15px 0px;
  }
}

@media (min-width: 1200px) {
  .col-sm-6.col-lg-4 {
    -ms-flex: 0 0 33%;
    flex: 0 0 33%;
    max-width: 33%;
    padding: 0px 0px 0px 15px;
  }
}

/* within1 is price card, within 2 is chart card in stockinfo.html */
@media (min-width: 300px) {
  .col-sm-6.col-lg-4.within1 {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.within2 {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }
}

@media (min-width: 768px) {
  .col-sm-6.col-lg-4.within1 {
    -ms-flex: 0 0 47.3%;
    flex: 0 0 47.3%;
    max-width: 47.3%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.within2 {
    -ms-flex: 0 0 50.7%;
    flex: 0 0 50.7%;
    max-width: 50.7%;
    padding: 0px 0px 0px 0px;
  }
}

/* TAgauge is TA trendgauge, TAcomment is TA comment in stockinfo.html */
@media (min-width: 300px) {
  .col-sm-6.col-lg-4.TAgauge {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.TAcomment {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }
}

@media (min-width: 768px) {
  .col-sm-6.col-lg-4.TAgauge {
    -ms-flex: 0 0 44%;
    flex: 0 0 44%;
    max-width: 44%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.TAcomment {
    -ms-flex: 0 0 56%;
    flex: 0 0 56%;
    max-width: 56%;
    padding: 0px 0px 0px 0px;
  }
}

@media (min-width: 992px) {
  .col-sm-6.col-lg-4.TAgauge {
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.TAcomment {
    -ms-flex: 0 0 74%;
    flex: 0 0 74%;
    max-width: 74%;
    padding: 0px 0px 0px 0px;
  }
}

/* MarketGaugeLeft is 4 left market trendgauges, MarketGaugeRight is 4 right market trendgauges in index.html */
@media (min-width: 300px) {
  .col-sm-6.col-lg-4.MarketGaugeLeft {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.MarketGaugeRight {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    padding: 0px 0px 0px 0px;
  }
}

@media (min-width: 768px) {
  .col-sm-6.col-lg-4.MarketGaugeLeft {
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    padding: 0px 0px 0px 0px;
  }

  .col-sm-6.col-lg-4.MarketGaugeRight {
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    padding: 0px 0px 0px 0px;
  }
}

/* Fundamental card */
@media (max-width: 992px) {
  .FA {
    margin: 15px 0px 0px 0px;
  }
}
.FA {
padding: 15px;
}

/* F-Score chart */
@media (min-width: 300px) {
    .fscorechart {
        width: 100%;
    }
}
@media (min-width: 768px) {
    .fscorechart {
        width: 66.6%;
    }
}
@media (min-width: 992px) {
    .fscorechart {
        width: 50%;
    }
}

@media (max-width: 600px) {
  #MScoreCommentTable {
    letter-spacing: -0.5px;
  }
}

@media (max-width: 576px) {
  #autocomplete {
    max-width: 128px;
    padding-left: 8px
  }
}

.hoverTable tr:hover {
  background-color: #ccc;
}
[data-theme="dark"] .hoverTable tr:hover {
  background-color: #2a2a3e;
}

tr:nth-child(even) {
  background-color: #ecf6fc;
}
[data-theme="dark"] tr:nth-child(even) {
  background-color: #2a2a3e;
}

tr:nth-child(odd) {
  background-color: white;
}
[data-theme="dark"] tr:nth-child(odd) {
  background-color: #1e1e32;
}

th {
  background: #95bce2;
  color: white;
  font-weight: 600;
  font-size: 12px;
}
[data-theme="dark"] th {
  background: #2a2a5e;
  color: #e8e8e8;
}

td, th {
  padding: 6px;
  /*border: 1px solid #95bce2;*/
  text-align: left;
}

tr td {
  font-size: 12px;
}

.CellWithComment {
  position: relative;
}

.CellComment {
  display: none;
  position: absolute;
  z-index: 100;
  border: 0px;
  background-color: #fffff9;
  border-style: solid;
  border-width: 1px;
  border-color: #eee;
  border-radius: 5px;
  padding: 3px;
  color: Gray;
  bottom: 25px;
  left: 180px;
  max-width: 800px;
  max-height: 800px;
  overflow-x: auto;
  opacity: 0.97;
}
[data-theme="dark"] .CellComment {
  background-color: #2a2a3e;
  border-color: #3a3a4e;
  color: #aaaaaa;
}

.CellWithComment:hover span.CellComment {
  display: block;
}

@media screen and (max-width: 767px) {
    li.paginate_button.previous {
        display: inline;
    }
 
    li.paginate_button.next {
        display: inline;
    }

    li.paginate_button.first {
        display: inline;
    }
 
    li.paginate_button.last {
        display: inline;
    }
    
    li.paginate_button {
        display: none;
    }
}

.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
  border-top: 2px solid #5DADE2;
  border-bottom: 0;
}

.dropdown-menu {
  border-top: 2px solid #5DADE2;
}

#emailmeInp {
    display: none !important;
}
#emailmeLbl {
    display: none !important;
}

.clean-card{
    background-color: #fff;
}
[data-theme="dark"] .clean-card {
    background-color: var(--bg-card);
}

:root {
    --bg: #FAF6F0;
}
[data-theme="dark"] {
    --bg: #1a1a2e;
}
body {
    background-color: var(--bg);
}
html[data-theme="dark"] body {
    color: #e8e8e8;
}

